Disable verbose logging for http auth plugin (#572)
* Enable quiet logging

* Bump version of mosquitto addon to 4.2

* Update changelog

* Add option to disable quiet logging

--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -21,7 +21,7 @@ auth_opt_http_port 8080
 auth_opt_http_getuser_uri /login
 auth_opt_http_superuser_uri /superuser
 auth_opt_http_aclcheck_uri /acl
-
+auth_opt_log_quiet %%AUTH_QUIET_LOGS%%
 allow_anonymous %%ANONYMOUS%%
 
 #include_dir /share/mosquitto
