--- a/cec_scan/Dockerfile
+++ b/cec_scan/Dockerfile
@@ -19,7 +19,7 @@ ARG LIBCEC_VERSION
 RUN apk add --no-cache eudev-libs p8-platform \
     && apk add --no-cache --virtual .build-dependencies \
         build-base cmake eudev-dev git swig p8-platform-dev \
-    && git clone --depth 1 -b "libcec-${LIBCEC_VERSION}" https://github.com/Pulse-Eight/libcec /usr/src/libcec \
+    && git clone --depth 1 -b libcec-${LIBCEC_VERSION} https://github.com/Pulse-Eight/libcec /usr/src/libcec \
     && mkdir -p /usr/src/libcec/build \
     && cd /usr/src/libcec/build \
     && if [ "$BUILD_ARCH" != "armhf" ] && [ "$BUILD_ARCH" != "aarch64" ]; then \
