--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,23 +66,64 @@ jobs:
   timeoutInMinutes: 120
   pool:
     vmImage: 'ubuntu-16.04'
-  strategy:
-    maxParallel: 3
-    matrix:
-      amd64:
-        buildArch: 'amd64'
-      i386:
-        buildArch: 'i386'
-      armhf:
-        buildArch: 'armhf'
-      armv7:
-        buildArch: 'armv7'
-      aarch64:
-        buildArch: 'aarch64'
   steps:
   - script: sudo docker login -u $(dockerUser) -p $(dockerPassword)
     displayName: 'Docker hub login'
-  - template: template-addon.yml
+  - template: azp-template-addon.yml
     parameters:
-      addonFolder: 'cec_scan'
-      addonImage: 'addon-cec_scan'
+      addon: 'cec_scan'
+      arch: '--all'
+
+
+- job: 'check_config'
+  condition: and(eq(variables['Build.SourceBranchName'], 'master'), succeeded('Hadolint'), succeeded('ShellCheck'), succeeded('JQ'))
+  dependsOn:
+  - 'Hadolint'
+  - 'ShellCheck'
+  - 'JQ'
+  timeoutInMinutes: 120
+  pool:
+    vmImage: 'ubuntu-16.04'
+  steps:
+  - script: sudo docker login -u $(dockerUser) -p $(dockerPassword)
+    displayName: 'Docker hub login'
+  - template: azp-template-addon.yml
+    parameters:
+      addon: 'check_config'
+      arch: '--all'
+
+
+- job: 'configurator'
+  condition: and(eq(variables['Build.SourceBranchName'], 'master'), succeeded('Hadolint'), succeeded('ShellCheck'), succeeded('JQ'))
+  dependsOn:
+  - 'Hadolint'
+  - 'ShellCheck'
+  - 'JQ'
+  timeoutInMinutes: 120
+  pool:
+    vmImage: 'ubuntu-16.04'
+  steps:
+  - script: sudo docker login -u $(dockerUser) -p $(dockerPassword)
+    displayName: 'Docker hub login'
+  - template: azp-template-addon.yml
+    parameters:
+      addon: 'configurator'
+      arch: '--all'
+
+
+- job: 'deconz'
+  condition: and(eq(variables['Build.SourceBranchName'], 'master'), succeeded('Hadolint'), succeeded('ShellCheck'), succeeded('JQ'))
+  dependsOn:
+  - 'Hadolint'
+  - 'ShellCheck'
+  - 'JQ'
+  timeoutInMinutes: 120
+  pool:
+    vmImage: 'ubuntu-16.04'
+  steps:
+  - script: sudo docker login -u $(dockerUser) -p $(dockerPassword)
+    displayName: 'Docker hub login'
+  - template: azp-template-addon.yml
+    parameters:
+      addon: 'deconz'
+      arch: '--armhf --amd64'
