--- a/azp-template-addon.yml
+++ b/azp-template-addon.yml
@@ -24,6 +24,6 @@ steps:
         -v ~/.docker:/root/.docker \
         -v /run/docker.sock:/run/docker.sock:rw -v $(pwd):/data:ro \
         homeassistant/amd64-builder:$(versionBuilder) \
-        --addon ${{ parameters.arch }} -t /data/${{ parameters.addon }} \
+        --addon "--$(buildArch)" -t /data/${{ parameters.addon }} \
         --docker-hub homeassistant
     displayName: 'Build ${{ parameters.addon }}'
